--- a/src/styles/_cluster.scss
+++ b/src/styles/_cluster.scss
@@ -1,63 +1,74 @@
-
 :root {
-	--postWidth: 40px;
-	--postHeight: 55px;
+  --postWidth: 40px;
+  --postHeight: 55px;
 }
 
 .title {
-	font-size: 2.25rem;
-	font-weight: 600;
-	opacity: 0.3;
-	padding-left: 10%;
-	padding-top: 3.25rem;
-	padding-bottom: 1.25rem;
+  font-size: 2.25rem;
+  font-weight: 600;
+  opacity: 0.3;
+  padding-left: 10%;
+  padding-top: 3.25rem;
+  padding-bottom: 1.25rem;
 }
 
 .poste {
-	width: 100%;
-	height: 100%;
-	border: 2px solid gray;
-	border-radius: 4px;
-	&.taken {
-		border: 0px solid transparent;
-		cursor: pointer;
-		img {
-			border-radius: 4px;
-			width: 100%;
-			height: 100%;
-			object-fit: cover;
-		}
-		&:hover img {
-			opacity: 0.7
-		}
-	}
-	&.entrance {
-		svg {
-			font-size: 1.45rem;
-		}
-	}
-	&.valid {
-		border: 2px solid #0ea5e9;
-	}
+  width: 100%;
+  height: 100%;
+  border: 2px solid gray;
+  border-radius: 4px;
+  &.taken {
+    border: 0px solid transparent;
+    cursor: pointer;
+    img {
+      border-radius: 4px;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+    &:hover img {
+      opacity: 0.7;
+    }
+  }
+  &.entrance {
+    svg {
+      font-size: 1.45rem;
+    }
+  }
+  &.valid {
+    border: 2px solid #0ea5e9;
+  }
 }
 
 .cluster {
-	display: grid;
-	grid-gap: 4px;
-	width: 100%;
-	justify-content: flex-start;
-	overflow: auto;
-	&.e1 {
-		grid-template-columns: repeat(20, var(--postWidth));
-		grid-template-rows: repeat(12, var(--postHeight));
-		margin-bottom: 12rem;
-	}
-	&.e2 {
-		grid-template-columns: repeat(31, var(--postWidth));
-		grid-template-rows: repeat(14, var(--postHeight));
-	}
-	@include desktop {
-		overflow: visible;
-		justify-content: center;
-	}
+  display: grid;
+  grid-gap: 4px;
+  width: 100%;
+  justify-content: flex-start;
+  overflow: auto;
+  &.e1 {
+    grid-template-columns: repeat(20, var(--postWidth));
+    grid-template-rows: repeat(12, var(--postHeight));
+    margin-bottom: 12rem;
+  }
+  &.e2 {
+    grid-template-columns: repeat(31, var(--postWidth));
+    grid-template-rows: repeat(14, var(--postHeight));
+  }
+  @include desktop {
+    overflow: visible;
+    justify-content: center;
+  }
+}
+.btn {
+  width: 60px;
+  height: 40px;
+  color: #fff;
+  border-radius: 5px;
+  background-color: #0ea5e9;
+  padding: 5px 5px;
+  cursor: pointer;
+  box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, 0.5),
+    7px 7px 20px 0px rgba(12, 88, 159, 0.874),
+    4px 4px 5px 0px rgba(0, 0, 0, 0.1);
 }
